Use assets directory for ALL examples

--- a/examples/embed.html
+++ b/examples/embed.html
@@ -14,7 +14,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
 <script>
     $(function() {
-        embeddedSWF = swfobject.embedSWF("../src/flash/anachrony.swf", "flashContainer", "300", "300", "10.0.0");
+        embeddedSWF = swfobject.embedSWF("assets/anachrony.swf", "flashContainer", "300", "300", "10.0.0");
         console.log(embeddedSWF);
     })
 </script>
