--- a/examples/start.html
+++ b/examples/start.html
@@ -23,7 +23,7 @@
     }
     $(function() {
         embeddedSWF = swfobject.embedSWF(
-                "../src/flash/anachrony.swf",
+                "assets/anachrony.swf",
                 "flashContainer",
                 "300",
                 "300",
