Rename js function calls for better consistency and isolation

--- a/examples/status.html
+++ b/examples/status.html
@@ -61,7 +61,7 @@
 
     }
 
-    function recorderStatus(data) {
+    function flashRecorderStatus(data) {
         activityLevel = data.activityLevel;
         if (activityLevel > -1) {
             $('.progress-bar').css('width', activityLevel + '%');
