--- a/examples/status.html
+++ b/examples/status.html
@@ -1,74 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Can we get status?</title>
-    <style>
-        .container {
-            max-width: 960px;
-        }
-    </style>
-
-</head>
-<body>
-    <div class="container">
-        <div id="flashContainer">
-
-        </div>
-
-        <div class="progress">
-            <div class="progress-bar" style="width:0%"></div>
-        </div>
-
-        <button id="startButton">Activate Microphone</button>
-    </div>
-</body>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
-<script>
-    flashVars = {};
-    params = {
-        allowScriptAccess: true
-    }
-    attrs = {
-        id: 'recorderSWF'
-    }
-    $(function() {
-        embeddedSWF = swfobject.embedSWF(
-                "assets/anachrony.swf",
-                "flashContainer",
-                "300",
-                "300",
-                "10.0.0",
-                false,
-                flashVars,
-                params,
-                attrs
+<html>
+    <body>
+        <center>
+            <div id="flashContainer"></div>
+            <h1>ACTIVITY LEVEL: <span id="volume">NO MICROPHONE AVAILABLE</span></h1>
+        </center>
+    </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
+    <script>
+        flashVars = {};
+        params = {allowScriptAccess: true};
+        attrs = {id: 'flashRecorder'};
+        swfobject.embedSWF(
+            "assets/anachrony.swf",
+            "flashContainer",
+            "300",
+            "300",
+            "10.0.0",
+            false,
+            flashVars,
+            params,
+            attrs
         );
 
-        $('#startButton').on('click', startListening);
-    });
-
-    function startListening() {
-        console.log('attempting to start recording...');
-        recorder = document.getElementById('recorderSWF');
-        console.log(recorder);
-
-        recorder.jsFlashRecorderInitialize();
-
-    }
-
-    function flashRecorderStatus(data) {
-        activityLevel = data.activityLevel;
-        if (activityLevel > -1) {
-            $('.progress-bar').css('width', activityLevel + '%');
+        function flashRecorderGetVolume(volume) {
+            document.getElementById('volume').innerHTML = volume.toString() + '%';
         }
-    }
-    function flashLog(message) {
-        console.log('FLASH_MESSAGE: ' + message)
-    }
-</script>
+    </script>
 </html>
