--- a/examples/record.html
+++ b/examples/record.html
@@ -26,17 +26,10 @@
 
         function onSuccess(data) {
             flashRecorder = data.ref;
-        }
+            flashRecorder.
+            setTimeout(
 
-        function startRecording(button) {
-            flashRecorder.startRecording();
-            button.setAttribute('disabled','disabled');
-            document.getElementById('stopRecordingButton').removeAttribute('disabled');
-        }
-
-        function stopRecording(button) {
-            flashRecorder.stopRecording();
-            button.setAttribute('disabled', 'disabled');
+            )
         }
 
         // Flash Callback Handlers
