--- a/examples/update-status.html
+++ b/examples/update-status.html
@@ -3,7 +3,7 @@
     <body>
         <center>
             <div id="flashContainer"></div>
-            <h1>VOLUME: <span id="volume">NO MICROPHONE AVAILABLE</span></h1>
+            <h1>VOLUME: <span id="volume">MICROPHONE NOT ENABLED</span></h1>
         </center>
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
